Fix Style in the Backend Script and Move Additional Options in Search Html

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -30,16 +30,18 @@
       <div class="required">
         <p class="btw">TV Show</p>
         <input id="query" type="text" name="search" class="form-control" placeholder="Enter TV Show">
-        <p class="btw">Or/And (keywords can be grouped using quotes)</p>
+        <p class="btw">Or/And</p>
         <input id="query" type="text" name="freeSearch" class="form-control" placeholder="Enter keyword">
         <br><br>
+        <p> Additional Options: </p>
       </div>
       <br>
       <!--     <form class="form-inline global-search">
         <input id="not" type="text" name="notShow" class="form-control" placeholder="Shows not to include">
         <input id="type" type="text" name="Genre" class="form-control" placeholder="Genre">
         <input id="stream" type="text" name="platform" class="form-control" placeholder="Platforms"> -->
-      Additional Options:
+      <!-- Additional Options: -->
+      <!-- <p> Additional Options: </p> -->
       <div class="slidecontainer">
         <p class="btw" style="color:red">Not like:</p>
         <input id="query-not" type="text" name="not-tv" class="form-control" placeholder="Enter TV Show">
