--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -12,7 +12,9 @@
   <script src="/static/js/selectize.min.js"></script>
 
   <style>
-    body {font-family: Helvetica, Arial, sans-serif}
+    body {
+      font-family: Helvetica, Arial, sans-serif
+    }
   </style>
 
 </head>
