--- a/app/static/main.css
+++ b/app/static/main.css
@@ -101,9 +101,10 @@
 .button-feedback {
     position: center;
     /* width: 152px; */
-    height: 25px;
+    height: 30px;
     border-radius: 5px;
-    width: 20%;
+    border-width: 2px;
+    width: 10%;
     /* margin-left: 35%;
   margin-right: 35%; */
 
