--- a/app/static/prototype1.css
+++ b/app/static/prototype1.css
@@ -28,7 +28,7 @@
   color: #8A8A8A;
 }
 
-#query {
+#query-show {
   position: center;
   width: 363.5px;
   height: 51px;
@@ -48,7 +48,30 @@
   line-height: 26px;
   letter-spacing: -0.02em;
 
-  color: #8A8A8A;
+  color: black;
+}
+
+#query-free {
+  position: center;
+  width: 363.5px;
+  height: 51px;
+  /* left: 357px; */
+  /* top: 326px; */
+
+  background: #F7F3F3;
+  border: 2px solid #D8CFCF;
+  box-sizing: border-box;
+  border-radius: 25px;
+  margin: auto;
+
+  font-family: 'Source Sans Pro', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 26px;
+  letter-spacing: -0.02em;
+
+  color: black;
 }
 
 #query-not {
