update buttons ui

--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -44,9 +44,9 @@
         <input class="button-feedback" type="button" style="background: #E2958B; border-color: #E2958B;" id="{{data[x]}}irrelevant"
           value="Irrelevant"
           onclick="posRel(0, '{{data[x]}}', '{{ show }}', '{{ keyword }}')">
-        <p id="{{data[x]}}thanks" style="display: none;">Thank you for voting!</p>
+        <p id="{{data[x]}}thanks" style="display: none;">Thank you for voting for {{data[x]}}!</p>
       </div>
-      <br><br><br>
+      <br><br><br><br>
     </div>
     {% endfor %}
     <br><br>
