--- a/app/static/main.css
+++ b/app/static/main.css
@@ -6,16 +6,17 @@
 
 @media (min-width:400px) {
     .help-tip{
-        top: 18px;
-        right: 18px;
+        top: 5px;
+        right: 5px;
         text-align: center;
         background-color: #BCDBEA;
         border-radius: 50%;
-        width: 24px;
-        height: 24px;
-        font-size: 14px;
-        line-height: 26px;
+        width: 20px;
+        height: 20px;
+        font-size: 12px;
+        line-height: 22px;
         cursor: default;
+        
     }
     
     .help-tip:before{
@@ -35,10 +36,11 @@
     
     .help-tip p{    /* The tooltip */
         display: none;
+        
         text-align: left;
         background-color: #1E2021;
-        padding: 20px;
-        width: 300px;
+        padding: 15px;
+        width: 290px;
         position: absolute;
         border-radius: 3px;
         box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
@@ -159,7 +161,7 @@
     body {
         position: absolute;
         width: 100%;
-        height: 124%;
+        height: 100%;
         padding-top: 15%;
         padding-bottom: 15%;
         background-image: url("../static/streamOn_background.png");
@@ -183,6 +185,7 @@
         padding-right: 20px;
         background-color:whitesmoke;
         border-radius: 20px;
+        display: none;
     }
     .slid{
         width: 240px;
