touched up frontend

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -154,7 +154,7 @@
                 <span style="font-weight:bolder">Similarity:</span> How similar do you want your show to be to your
                 query?
                 <br><br>
-                <span style="font-weight:bolder"></span>Not like:</span> How much do you want what you don't want to
+                <span style="font-weight:bolder">Not like:</span> How much do you want what you don't want to
                 affect your results? If we find a show that's
                 perfect for what you want but also checks a lot of what you don't want this weight will tell us whether
                 to show it to you
@@ -163,7 +163,7 @@
                 off the TV Show vs Keyword? Far left for
                 all TV Show, far right for all Keyword
                 <br><br>
-                <span style="font-weight:bolder">Not like:</span> TV Show - Keyword: Same as TV Show - Keyword but for
+                <span style="font-weight:bolder">Not like: TV Show - Keyword:</span> Same as TV Show - Keyword but for
                 Not Like search items instead
               </p>
             </div>
