touched up frontend

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -359,15 +359,15 @@
       }
       else if (queryS.value.length == 0) {
         like_key_slide.value = "100"
-        like_key_val.innerHTML = "100"
+        like_key_val.innerHTML = "100%"
       }
       else if (queryF.value.length == 0) {
         like_key_slide.value = "0"
-        like_key_val.innerHTML = "0"
+        like_key_val.innerHTML = "0%"
       }
       else if (queryS.value.length == 1) {
         like_key_slide.value = "50"
-        like_key_val.innerHTML = "50"
+        like_key_val.innerHTML = "50%"
 
       }
 
@@ -379,15 +379,15 @@
       }
       else if (queryS.value.length == 0) {
         like_key_slide.value = "100"
-        like_key_val.innerHTML = "100"
+        like_key_val.innerHTML = "100%"
       }
       else if (queryF.value.length == 0) {
         like_key_slide.value = "0"
-        like_key_val.innerHTML = "0"
+        like_key_val.innerHTML = "0%"
       }
       else if (queryF.value.length == 1) {
         like_key_slide.value = "50"
-        like_key_val.innerHTML = "50"
+        like_key_val.innerHTML = "50%"
 
       }
 
@@ -416,15 +416,15 @@
       }
       else if (queryNS.value.length == 0) {
         not_key_slide.value = "100"
-        not_key_val.innerHTML = "100"
+        not_key_val.innerHTML = "100%"
       }
       else if (queryNF.value.length == 0) {
         not_key_slide.value = "0"
-        not_key_val.innerHTML = "0"
+        not_key_val.innerHTML = "0%"
       }
       else if (queryNS.value.length == 1) {
         not_key_slide.value = "50"
-        not_key_val.innerHTML = "50"
+        not_key_val.innerHTML = "50%"
 
       }
 
@@ -436,15 +436,15 @@
       }
       else if (queryNS.value.length == 0) {
         not_key_slide.value = "100"
-        not_key_val.innerHTML = "100"
+        not_key_val.innerHTML = "100%"
       }
       else if (queryNF.value.length == 0) {
         not_key_slide.value = "0"
-        not_key_val.innerHTML = "0"
+        not_key_val.innerHTML = "0%"
       }
       else if (queryNF.value.length == 1) {
         not_key_slide.value = "50"
-        not_key_val.innerHTML = "50"
+        not_key_val.innerHTML = "50%"
 
       }
 
