touched up frontend

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -112,7 +112,7 @@
         <input id="query-not-free" type="text" name="not-keyword" class="form-control" placeholder="Enter keyword">
         <div style="position:relative">
           <div class="help-tip">
-            <p>Enter either a TV Show or a couple words about the type of show you don't like. Ex: "dark dramatic"
+            <p>Enter either a TV Show or a couple words about the type of show you don't like
             </p>
           </div>
         </div>
