Fixed filters and added back button to end of results page

--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -49,6 +49,8 @@
     </div>
     {% endfor %}
     <br><br>
+    <button class="back" id="button" type="submit" position="center" onclick="history.go(-1)"> Go Back!</button>
+    <br><br>
   </div>
 </body>
 
