Add our names to site

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -216,12 +216,17 @@
 
 
       </div>
-    </div>
     <br><br>
     <p>
       <button id="button" type="submit" position="center" form="main-search"> Find Shows!
       </button>
     </p>
+    <br><br>
+    <p>
+      <span style="font-weight: bold"> Made with <span style="color:#ff0000">&#10084;</span></span><br>Divya Damodaran, Kendall Lane, Riya Jaggi, Siddhi
+      Chordia, Sidharth Vadduri
+    </p>
+    </div>
   </form>
 
   <script>
